# petab_sciml

./: Project.toml  README.md
docs/: Manifest.toml  make.jl
docs/src/: format.md  index.md  net_activation.md  test_info.md  tutorial.md
src/julia/: create_testdata.jl  helper.jl  lux_layers.jl
src/python/: create_testdata.sh  helper.py  pyproject.toml
src/python/petab_sciml/: specification.py
src/python/petab_sciml/sbml/examples/: ImportSciMLModel.ipynb
src/python/petab_sciml/standard/: __init__.py  array_data.py  input_data.py  mlmodel.py  nn_model.py  parameter_values.py  schema.yaml
src/python/petab_sciml/tmp_examples/: README.md  example.py  example2.py  example3.py  example4.py  example5.py
src/python/petab_sciml/tmp_examples/data/: models1.yaml
src/python/petab_sciml/tmp_examples/data2/: models0.yaml
src/python/petab_sciml/tmp_examples/data3/: models1.yaml
src/python/petab_sciml/tmp_examples/data4/: models1.yaml
test_cases/: README.md  helper.jl  helper.py  import.jl
test_cases/001/: grad_llh.tsv  grad_net1.hf5  nn_output1.tsv  nn_output2.tsv  nn_output3.tsv  simulations.tsv  solutions.yaml
test_cases/002/: grad_llh.tsv  grad_mech.tsv  grad_net1.hf5  nn_output1.tsv  nn_output2.tsv  nn_output3.tsv  simulations.tsv  solutions.yaml
test_cases/003/: README.md  grad_llh.tsv  grad_mech.tsv  grad_net1.hf5  nn_output2.tsv  nn_output3.tsv  solutions.yaml
test_cases/004/: README.md  grad_llh.tsv  grad_mech.tsv  grad_net1.hf5  nn_output1.tsv  nn_output2.tsv  nn_output3.tsv  simulations.tsv  solutions.yaml
test_cases/005/: README.md  (+8 more)
(+1806 files in other folders)
